syntax = "proto3";

package nodeorb.scm.v1;

option go_package = "github.com/albelikov/nodeorb/gen/scm/v1;scmv1";

// Сервис управления доверием и авторизацией
service TrustService {
  // Проверка прав на действие с учетом контекста (ABAC)
  rpc EvaluateAccess(EvaluateAccessRequest) returns (EvaluateAccessResponse);
  
  // Получение Trust Token для конкретной сделки
  rpc IssueTrustToken(IssueTrustTokenRequest) returns (IssueTrustTokenResponse);
  
  // Получение актуального Compliance Passport участника
  rpc GetCompliancePassport(GetCompliancePassportRequest) returns (GetCompliancePassportResponse);
  
  // Валидация ручного ввода цен (Market Oracle)
  rpc ValidateManualInput(ValidateManualInputRequest) returns (ValidateManualInputResponse);
  
  // Создание апелляции на результат валидации
  rpc CreateAppeal(CreateAppealRequest) returns (CreateAppealResponse);
  
  // Проверка биометрической аутентификации
  rpc VerifyBiometrics(VerifyBiometricsRequest) returns (VerifyBiometricsResponse);
  
  // Проверка геозон (Geofencing)
  rpc CheckGeofence(CheckGeofenceRequest) returns (CheckGeofenceResponse);
  
  // Проверка часов работы (ELD)
  rpc CheckHoursOfService(CheckHoursOfServiceRequest) returns (CheckHoursOfServiceResponse);
  
  // Валидация ручного ввода событий (Market Median Oracle)
  rpc ValidateManualEvent(ValidateManualEventRequest) returns (ValidateManualEventResponse);
  
  // Проверка санкционных списков (External Compliance)
  rpc CheckSanctions(CheckSanctionsRequest) returns (CheckSanctionsResponse);
  
  // Проверка Denied Party Screening
  rpc CheckDeniedParty(CheckDeniedPartyRequest) returns (CheckDeniedPartyResponse);
  
  // Проверка доступа к грузу с учетом геозон
  rpc ValidateCargoAccess(ValidateCargoAccessRequest) returns (ValidateCargoAccessResponse);
  
  // Генерация пакета доказательств
  rpc GenerateEvidencePackage(GenerateEvidencePackageRequest) returns (GenerateEvidencePackageResponse);
  
  // Проверка целостности пакета доказательств
  rpc VerifyEvidencePackage(VerifyEvidencePackageRequest) returns (VerifyEvidencePackageResponse);
  
  // Расчет динамического Trust Score
  rpc CalculateTrustScore(CalculateTrustScoreRequest) returns (CalculateTrustScoreResponse);
  
  // Получение рекомендаций по Trust Score
  rpc GetTrustScoreRecommendations(GetTrustScoreRecommendationsRequest) returns (GetTrustScoreRecommendationsResponse);
}

// Запрос на проверку доступа
message EvaluateAccessRequest {
  string user_id = 1;
  string service_id = 2;       // ID сервиса (например, "freight-marketplace")
  string action = 3;            // Действие (например, "place_bid", "view_itar_cargo")
  map<string, string> context = 4; // Контекст: "cargo_type": "ADR", "price": "5000"
}

// Ответ на проверку доступа
message EvaluateAccessResponse {
  bool allowed = 1;
  string decision_id = 2;       // ID решения для логов WORM
  string reason = 3;            // Причина отказа (если allowed = false)
  RiskLevel risk_level = 4;     // Текущий уровень риска
  bool requires_biometrics = 5; // Требуется биометрическая проверка
  bool requires_appeal = 6;     // Требуется апелляция
}

// Запрос на получение Trust Token
message IssueTrustTokenRequest {
  string user_id = 1;
  string entity_id = 2;         // ID лота или заказа
  string payload_hash = 3;      // Хэш данных (например, хэш введённых цен)
}

// Ответ с Trust Token
message IssueTrustTokenResponse {
  string trust_token = 1;       // Подписанный токен
  int64 expires_at = 2;
}

// Запрос на получение Compliance Passport
message GetCompliancePassportRequest {
  string user_id = 1;
  string entity_type = 2;       // "CARRIER", "SHIPPER", "WAREHOUSE"
}

// Ответ с Compliance Passport
message GetCompliancePassportResponse {
  string user_id = 1;
  string entity_type = 2;
  double trust_score = 3;
  string compliance_status = 4; // "VERIFIED", "SUSPENDED", "BLACKLISTED"
  bool is_biometrics_enabled = 5;
  string verification_data = 6; // JSON с документами
  int64 expires_at = 7;
}

// Запрос на валидацию ручного ввода
message ValidateManualInputRequest {
  string user_id = 1;
  string order_id = 2;
  string service_source = 3;    // "freight-marketplace"
  double materials_cost = 4;
  double labor_cost = 5;
  string currency = 6;
}

// Ответ на валидацию ручного ввода
message ValidateManualInputResponse {
  string status = 1;            // "GREEN", "YELLOW", "RED"
  double risk_score = 2;        // 0.0 - 1.0
  bool requires_appeal = 3;
  bool requires_biometrics = 4;
  double suggested_median = 5;
  string comment = 6;
}

// Запрос на создание апелляции
message CreateAppealRequest {
  string validation_id = 1;
  string user_justification = 2;
  string evidence_links = 3;    // JSON массив ссылок на документы
  string bio_session_id = 4;    // ID биометрической сессии
}

// Ответ на создание апелляции
message CreateAppealResponse {
  string appeal_id = 1;
  string status = 2;            // "PENDING", "APPROVED", "REJECTED"
}

// Запрос на биометрическую проверку
message VerifyBiometricsRequest {
  string user_id = 1;
  string biometric_data = 2;    // WebAuthn данные
  string session_id = 3;
}

// Ответ на биометрическую проверку
message VerifyBiometricsResponse {
  bool verified = 1;
  string verification_id = 2;
  string reason = 3;
}

// Запрос на проверку геозон
message CheckGeofenceRequest {
  string user_id = 1;
  double latitude = 2;
  double longitude = 3;
  string geofence_type = 4;     // "WAREHOUSE", "ROUTE", "DELIVERY_ZONE"
}

// Ответ на проверку геозон
message CheckGeofenceResponse {
  bool inside_geofence = 1;
  string geofence_id = 2;
  string violation_reason = 3;
}

// Запрос на проверку часов работы
message CheckHoursOfServiceRequest {
  string driver_id = 1;
  string vehicle_id = 2;
  int64 current_time = 3;
}

// Ответ на проверку часов работы
message CheckHoursOfServiceResponse {
  bool compliant = 1;
  int32 remaining_hours = 2;
  int32 next_required_break = 3; // в минутах
  string violation_reason = 4;
}

// Уровень риска
enum RiskLevel {
  RISK_LEVEL_UNSPECIFIED = 0;
  RISK_LEVEL_LOW = 1;
  RISK_LEVEL_MEDIUM = 2;
  RISK_LEVEL_HIGH = 3;          // Требует биометрии или апелляции
  RISK_LEVEL_CRITICAL = 4;      // Полная блокировка
}

// Запрос на валидацию ручного ввода событий
message ValidateManualEventRequest {
  string user_id = 1;
  string order_id = 2;
  double materials_cost = 3;
  double labor_cost = 4;
  string currency = 5;
}

// Ответ на валидацию ручного ввода событий
message ValidateManualEventResponse {
  string status = 1;            // "GREEN", "YELLOW", "RED"
  double risk_score = 2;        // 0.0 - 1.0
  bool requires_appeal = 3;
  bool requires_biometrics = 4;
  double suggested_median = 5;
  string comment = 6;
  bool audit_required = 7;      // Флаг необходимости аудита при отклонении > 20%
}

// Запрос на проверку санкционных списков
message CheckSanctionsRequest {
  string entity_id = 1;
  string entity_type = 2;       // "CARRIER", "SHIPPER", "WAREHOUSE"
}

// Ответ на проверку санкционных списков
message CheckSanctionsResponse {
  bool is_blocked = 1;
  repeated string sanction_lists = 2;
  double confidence = 3;
  string details = 4;
}

// Запрос на проверку Denied Party Screening
message CheckDeniedPartyRequest {
  string entity_id = 1;
  string entity_type = 2;
}

// Ответ на проверку Denied Party Screening
message CheckDeniedPartyResponse {
  bool is_denied = 1;
  repeated string denied_lists = 2;
  double confidence = 3;
  string details = 4;
}

// Запрос на проверку доступа к грузу
message ValidateCargoAccessRequest {
  string user_id = 1;
  string order_id = 2;
  double device_latitude = 3;
  double device_longitude = 4;
  double cargo_latitude = 5;
  double cargo_longitude = 6;
}

// Ответ на проверку доступа к грузу
message ValidateCargoAccessResponse {
  bool access_granted = 1;
  bool is_within_route = 2;
  double distance_to_cargo = 3;
  string violation_reason = 4;
}

// Запрос на генерацию пакета доказательств
message GenerateEvidencePackageRequest {
  string order_id = 1;
}

// Ответ на генерацию пакета доказательств
message GenerateEvidencePackageResponse {
  string package_id = 1;
  string root_hash = 2;
  int64 generated_at = 3;
  int32 events_count = 4;
  int32 validations_count = 5;
}

// Запрос на проверку целостности пакета доказательств
message VerifyEvidencePackageRequest {
  string package_id = 1;
}

// Ответ на проверку целостности пакета доказательств
message VerifyEvidencePackageResponse {
  bool is_verified = 1;
  bool signature_valid = 2;
  bool hash_chain_valid = 3;
  bool root_hash_valid = 4;
  int64 verification_time = 5;
}

// Запрос на расчет Trust Score
message CalculateTrustScoreRequest {
  string user_id = 1;
}

// Ответ на расчет Trust Score
message CalculateTrustScoreResponse {
  double trust_score = 1;
  string trust_level = 2;       // "CRITICAL", "LOW", "MEDIUM", "HIGH"
  double price_accuracy_score = 3;
  double appeal_success_score = 4;
  double biometrics_compliance_score = 5;
  double geographic_compliance_score = 6;
  double time_factor_score = 7;
}

// Запрос на получение рекомендаций по Trust Score
message GetTrustScoreRecommendationsRequest {
  string user_id = 1;
}

// Ответ на получение рекомендаций по Trust Score
message GetTrustScoreRecommendationsResponse {
  repeated string recommendations = 1;
}
